<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connext_pubsub_zero_copy</name>
  <version>0.0.0</version>
  <description>ROS 2 Nodes using RTI Connext DDS' Modern C++ API</description>
  <maintainer email="wayve@todo.todo">wayve</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>builtin_interfaces</depend>
  <!-- All required Connext dependencies can be satisfied by this module -->
  <depend>rclcpp_dds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
